# kraph-core

./: .gitignore  LICENSE  README.md  WHITEPAPER.md
contracts/: Anchor.toml
contracts/programs/kraph-credits-hook/: Cargo.toml
contracts/programs/kraph-credits-hook/src/: lib.rs
contracts/programs/supaba-registry/: Cargo.toml
contracts/programs/supaba-registry/src/: lib.rs
crypto/: package.json  tsconfig.json
crypto/src/: envelope.ts  index.ts  keys.ts  merkle.ts  wal.ts
firmware/: Dockerfile.initrd  Dockerfile.kernel  Dockerfile.ovmf  README.md
firmware/config/: docker-daemon.json  kernel.config  supaba-node.env
firmware/scripts/: build-all.sh  deploy-gcp-sev-snp.sh  init.sh  launch-cvm.sh  verify-attestation.sh
node-rs/: Cargo.toml
node-rs/examples/: verify_studio_token.rs
node-rs/scripts/: Caddyfile.template  install-node.sh
node-rs/src/: build_store.rs  config.rs  db_migration.rs  frontend_build.rs  health.rs  instance_manager.rs  integrity.rs  job_admission.rs  main.rs  nextjs_service.rs  path_safety.rs  replication.rs  sigauth.rs  studio_proxy.rs  warm_pool.rs
node-rs/src/db/: mod.rs  schema.rs
node-rs/src/tee/: attestation.rs  mock.rs  mod.rs
