[package]
name = "kraph-credits-hook"
version = "0.1.0"
description = "Transfer-hook program for the KCREDS_NOVALUE (Kraph Credits) token. Allows transfers only if at least one side is on a mutable allowlist."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kraph_credits_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.10"
spl-tlv-account-resolution = "0.10"
spl-discriminator = "0.4"
