[package]
name = "supaba-registry"
version = "0.1.0"
description = "Supaba decentralized Supabase provisioning registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "supaba_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
